added wordcount job